--- a/css/ctStyles.css
+++ b/css/ctStyles.css
@@ -69,7 +69,7 @@
     padding-top: 20px;
     font-family: 'Helvetica';
     font-size: 1.2em;
-    background-color: #33658a;
+    color: #33658a;
 }
 
 .main_page_links ul {
